<resources>
    <string name="app_name">To Do List</string>
    <string name="add_task">Ajouter une tâche</string>
    <string name="textview_priorite">Priorité</string>
    <string name="textview_haute">Haute</string>
    <string name="textview_moyenne">Moyenne</string>
    <string name="textview_basse">Basse</string>
    <string name="button_ajouter">Ajouter</string>
    <string name="menu_setting">Préférences</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="accessibility">Accessibilité</string>
    <string name="pref_show_priorities_key">key_perf_show_priorities</string>
    <string name="pref_show_priorities_summary_on">Les priorités sont visibles</string>
    <string name="pref_show_priorities_summary_off">Les priorités ne sont pas visibles</string>
    <string name="pref_show_priorities_label">Afficher les priorités</string>
    <string name="pref_text_size_label">Taille du text</string>
    <string name="pref_text_size_key">key_pref_text_size</string>
    <string name="pref_text_size_default">16</string>
    <string name="settings">Préférences</string>
</resources>